updates to the home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <div class="top">
+    <div class="top pic1">
         <h1 class="subHeader">Alexandria Genchev</h1>
         <h2 class="subHeader">Game Developer  |  Programmer  |  Artist  |  Web Developer</h2>
     </div>
@@ -65,9 +65,13 @@
         <p>E: alexx.genchev@gmail.com</p>
         <p>S: gencha@rpi.edu</p>
         <h3 class="subHeader">My Work</h3>
-        <a href="https://alexxgen.itch.io/" target="_blank">Itch</a>
-        <a href="https://github.com/AlexxGen" target="_blank">Github</a>
-        <a href="https://www.linkedin.com/in/alexandria-genchev/" target="_blank">LinkedIn</a>
+
+        <p> 
+            <a href="https://alexxgen.itch.io/" target="_blank">Itch</a>
+            <a href="https://github.com/AlexxGen" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/alexandria-genchev/" target="_blank">LinkedIn</a>
+        </p>
+
     </footer>
 </body>
 </html>
