added style to the home page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div>
-            <a class="pageSelect" href="./home.html">Home</a>
+            <a class="pageSelect" href="./index.html">Home</a>
             <a class="pageSelect" href="./digitalGames.html">Digital Games</a>
             <a class="pageSelect" href="./analogGames.html">Analog Games</a>
             <a class="pageSelect" href="./artAssets.html">Art Assets</a>
@@ -32,7 +32,9 @@
 
     <div class="latest">
         <h2 class="subHeader">Latest Project</h2>
-        <img />
+        <img src="./Images/HiddenPines/HiddenPines6.gif" alt="Hidden Pines GIF">
+
+        <h3 class="gameTitle">Hidden Pines</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
