added the other pages

--- a/digitalGames.html
+++ b/digitalGames.html
@@ -29,6 +29,21 @@
             <h1 class="subHeader">Digital Games</h1>
         </div>
 
+        <div class="shadowless game">
+            <img src="./Images/Shadowless/map2.png" alt="Shadowless">
+
+            <h3 class="gameTitle">Shadowless</h3>
+            <p>
+                Shadowless is a text-based adventure game that guides the player to explore a camp on the
+                outskirts of Copper Junction. The player follows Bree as they try to find vehicle parts around camp 
+                to fix their motercyle. 
+
+                I made all art assets and programmed the whole game.
+
+                - July 2024 -
+            </p>
+        </div>
+
         <div class="hiddenPines game">
             <img src="./Images/HiddenPines/HiddenPines6.gif" alt="Hidden Pines GIF">
 
