--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h2 class="subHeader">Game Developer  |  Programmer  |  Artist  |  Web Developer</h2>
         </div>
 
-        <div class="latest">
-            <h2 class="subHeader">Latest Project</h2>
+        <div class="spotlight">
+            <h2 class="subHeader">Spotlight Project</h2>
             <img src="./Images/HiddenPines/HiddenPines6.gif" alt="Hidden Pines GIF">
 
             <h3 class="gameTitle">Hidden Pines</h3>
