--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 
             <h3 class="gameTitle">Hidden Pines</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
+                In this 2D platformer, the player plays Evelyn, a girl who has struggled with
+                misfortune all her life. The game starts with her moving to a new town that is
+                not as peaceful as the residents let on.
+
+                I made most art assets and programmed the player movements and character animations.
+
+                - May 2024 -
             </p>
         </div>
 
