--- a/analogGames.html
+++ b/analogGames.html
@@ -45,6 +45,19 @@
             </p>
         </div>
 
+        <div class="ranchLife game">
+            <img src="./Images/RanchLife/ranchLife.jpg" alt="Ranch Life">
+
+            <h3 class="gameTitle">Ranch Life</h3>
+            <p>
+                In this 2-4 player table top game, players embody the life of a cattle rancher, managing
+                their herd year after year. While players have fun counting their cows and attending the 
+                yearly County Fair, they also learn what real life ranchers must deal with daily.
+
+                - July 2017 -
+            </p>
+        </div>
+
         <footer>
             <h2 class="subHeader">Contact</h2>
             <p>E: alexx.genchev@gmail.com</p>
